syntax = "proto3";
package messages;

message HouseInfoMsg{
    string id = 1;
}

message HouseInfoListMsg{
    repeated HouseInfoMsg house = 1;
}