syntax = "proto3";
package house.services;

import public "HouseMsgs.proto";
import public "StatisticMsgs.proto";

message Empty{}

message Response{
    enum Status{
        OK = 0;
        ERROR = 1;
    }

    Status status = 1;
}

service HouseServices {

    rpc hello(messages.HouseInfoMsg) returns (Response);

    rpc goodbye(messages.HouseInfoMsg) returns (Response);

    rpc sendStatistic(stream messages.StatisticHouseMsg) returns (Response);

    rpc stopCoordinate(Empty) returns (Response);

}
